--- a/diseño-desarrollo-web.html
+++ b/diseño-desarrollo-web.html
@@ -18,6 +18,10 @@
             <img src="./img/logo-uade-transparente.png" alt="Logo UADE" class="logo">
             <h1>Licenciatura en Gestión de Tecnología de la Información</h1>
         </div>
+        <div class="modo-toggle">
+            <button id="modo-claro">🌞 Claro</button>
+            <button id="modo-oscuro">🌙 Oscuro</button>
+        </div>
     </header>
 
     <!-- NAVBAR -->
@@ -122,16 +126,16 @@
                         <a href="https://dpaezdemiguel.github.io/UVA3TP2/" target="_blank">GitHub Pages</a></p>
 
                         <p><strong>TP11: Ejercicio integrador - Modo claro y oscuro JavaScript</strong><br>
-                        <a href="https://github.com/dpaezdemiguel/UVA2TP3" target="_blank">Repositorio GitHub</a> |
-                        <a href="https://dpaezdemiguel.github.io/UVA2TP3/" target="_blank">GitHub Pages</a></p>
+                        <a href="https://github.com/dpaezdemiguel/UVA3TP3" target="_blank">Repositorio GitHub</a> |
+                        <a href="https://dpaezdemiguel.github.io/UVA3TP3/" target="_blank">GitHub Pages</a></p>
                     </div>
                     <br>
                     <div class="uva">
                         <h4><b>UVA 4</b></h4>
                         <br>
                         <p><strong>TP12: Integración con GitHub</strong><br>
-                        <a href="https://github.com/dpaezdemiguel/UVA2TP1" target="_blank">Repositorio GitHub</a> |
-                        <a href="https://dpaezdemiguel.github.io/UVA2TP1/" target="_blank">GitHub Pages</a></p>
+                        <a href="https://github.com/dpaezdemiguel/UVA4TP1" target="_blank">Repositorio GitHub</a> |
+                        <a href="https://dpaezdemiguel.github.io/UVA4TP1/" target="_blank">GitHub Pages</a></p>
                     </div>
                 </section>
 
@@ -140,7 +144,13 @@
                     <h3>Bibliografía</h3>
                     <br>
                     <p>Niederst Robbins, Jennifer <i>HTML5 pocket reference</i></p>
+                    <br>
                     <p>Meyer, Eric <i>CSS pocket reference</i></p>
+                    <br>
+                    <p>Scott, Emmit <i>SPA Design and Architecture: Understanding Single Page Web Applications</i></p>
+                    <br>
+                    <p>Schulz, Ralph G. <i>Diseño web con CSS</i></p>
+                    <br>
                     <p><a href="https://www.w3schools.com" target="_blank">W3 Schools</a></p>
                 </section>
 
@@ -176,5 +186,7 @@
         });
     </script>
 
+    <!-- Script JS -->
+    <script src="./js/script.js"></script>
 </body>
 </html>
