--- a/materias2025.html
+++ b/materias2025.html
@@ -18,6 +18,10 @@
             <img src="./img/logo-uade-transparente.png" alt="Logo UADE" class="logo">
             <h1>Licenciatura en Gestión de Tecnología de la Información</h1>
         </div>
+        <div class="modo-toggle">
+            <button id="modo-claro">🌞 Claro</button>
+            <button id="modo-oscuro">🌙 Oscuro</button>
+        </div>
     </header>
 
     <!-- NAVBAR -->
@@ -97,6 +101,9 @@
             document.getElementById('nav-links').classList.toggle('active');
         });
     </script>
+
+    <!-- Script JS -->
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
