--- a/contacto.html
+++ b/contacto.html
@@ -18,6 +18,10 @@
             <img src="./img/logo-uade-transparente.png" alt="Logo UADE" class="logo">
             <h1>Licenciatura en Gestión de Tecnología de la Información</h1>
         </div>
+        <div class="modo-toggle">
+            <button id="modo-claro">🌞 Claro</button>
+            <button id="modo-oscuro">🌙 Oscuro</button>
+        </div>
     </header>
 
     <!-- NAVBAR -->
@@ -88,7 +92,7 @@
         });
     </script>
 
-    <!-- Tu nuevo script de validación -->
+    <!-- Script JS -->
     <script src="./js/script.js"></script>
 
 </body>
