--- a/avisos.html
+++ b/avisos.html
@@ -34,12 +34,13 @@
             </button>
 
             <!-- Lista de links -->
-            <ul id="nav-links" class="nav-links">
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="avisos.html"><i class="fas fa-bell"></i> Avisos</a></li>
-                <li><a href="sobremi.html"><i class="fas fa-user"></i> Sobre mí</a></li>
-                <li><a href="materias2025.html"><i class="fas fa-book"></i> Materias 2025</a></li>
-                <li><a href="contacto.html"><i class="fas fa-envelope"></i> Contacto</a></li>
+            <ul class="nav-links">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="materias2025.html">Materias 2025</a></li>
+                <li><a href="sobremi.html">Sobre mí</a></li>
+                <li><a href="diseño-desarrollo-web.html">Diseño Web</a></li>
+                <li><a href="avisos.html" class="activo" aria-current="page">Avisos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
