--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home - Organización cuatrimestre</title>
-    <link rel="stylesheet" href="./css/styles.css">
-
+    <link rel="stylesheet" href="./css/styles.css" />
     <!-- Librería de íconos Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 </head>
-
 <body>
-
     <!-- HEADER -->
     <header class="header">
         <div class="header-content">
-            <img src="./img/logo-uade-transparente.png" alt="Logo UADE" class="logo">
+            <img src="./img/logo-uade-transparente.png" alt="Logo UADE" class="logo" />
             <h1>Licenciatura en Gestión de Tecnología de la Información</h1>
         </div>
         <div class="modo-toggle">
-            <button id="modo-claro">🌞 Claro</button>
-            <button id="modo-oscuro">🌙 Oscuro</button>
+            <button id="modo-claro" aria-label="Activar modo claro">🌞 Claro</button>
+            <button id="modo-oscuro" aria-label="Activar modo oscuro">🌙 Oscuro</button>
         </div>
     </header>
 
     <!-- NAVBAR -->
     <nav class="navbar">
         <div class="nav-container">
-
             <!-- Botón hamburguesa -->
-            <button id="menu-toggle" class="menu-toggle">
-                <i class="fas fa-bars"></i>
+            <button id="menu-toggle" class="menu-toggle" aria-label="Abrir o cerrar menú de navegación">
+                <i class="fas fa-bars" aria-hidden="true"></i>
             </button>
 
             <!-- Lista de links -->
-            <ul id="nav-links" class="nav-links">
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="avisos.html"><i class="fas fa-bell"></i> Avisos</a></li>
-                <li><a href="sobremi.html"><i class="fas fa-user"></i> Sobre mí</a></li>
-                <li><a href="materias2025.html"><i class="fas fa-book"></i> Materias 2025</a></li>
-                <li><a href="contacto.html"><i class="fas fa-envelope"></i> Contacto</a></li>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="index.html" class="activo" aria-current="page">Inicio</a></li>
+                <li><a href="materias2025.html">Materias 2025</a></li>
+                <li><a href="sobremi.html">Sobre mí</a></li>
+                <li><a href="diseño-desarrollo-web.html">Diseño Web</a></li>
+                <li><a href="avisos.html">Avisos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -100,13 +100,18 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-content">
-            <p>© <strong>2025 Daniela Páez De Miguel</strong><br><br>
-                Todos los derechos reservados.<br>
-                Proyecto realizado como parte de la materia Diseño y Desarrollo WEB.</p>
+            <p>© <strong>2025 Daniela Páez De Miguel</strong><br /><br />
+                Todos los derechos reservados.<br />
+                Proyecto realizado como parte de la materia Diseño y Desarrollo WEB.
+            </p>
 
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/danielapdem" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:dpaezdemiguel@uade.edu.ar"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/danielapdem" target="_blank" aria-label="LinkedIn de Daniela">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="mailto:dpaezdemiguel@uade.edu.ar" aria-label="Enviar correo a Daniela">
+                    <i class="fas fa-envelope"></i>
+                </a>
             </div>
         </div>
     </footer>
@@ -120,6 +125,5 @@
 
     <!-- Script JS -->
     <script src="./js/script.js"></script>
-
 </body>
 </html>
